<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".Login">

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"

         />
    <EditText
        android:id="@+id/Usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usuariologin"
        android:textColorHint="@color/black"
        android:textSize="22sp"
        android:layout_marginHorizontal="30dp"
        android:inputType="text"
        android:background="@null"
        app:layout_constraintTop_toTopOf="@id/Logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3"
        />

    <EditText
        android:id="@+id/Contraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwordlogin"
        android:textColorHint="@color/black"
        android:textSize="22sp"
        android:layout_marginHorizontal="30dp"
        android:inputType="text"
        android:background="@null"
        app:layout_constraintTop_toTopOf="@id/Usuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        />

    <Button
        android:id="@+id/botoningresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:backgroundTint="@color/steelblue"
        android:text="@string/ingresarlog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Contraseña"
        app:layout_constraintVertical_bias="0.2" />

    <ImageView
        android:id="@+id/logofacebook"
        android:src="@drawable/facebook"
        app:layout_constraintTop_toTopOf="@id/botoningresar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintHorizontal_bias="0.1"
        android:layout_width="70dp"
        android:layout_height="70dp"/>

    <ImageView
        android:id="@+id/logoGmail"
        android:src="@drawable/github"
        app:layout_constraintTop_toTopOf="@id/botoningresar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_width="70dp"
        android:layout_height="70dp"/>

    <ImageView
        android:id="@+id/logoGitHub"
        android:src="@drawable/gmail"
        app:layout_constraintTop_toTopOf="@id/botoningresar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintHorizontal_bias="0.9"
        android:layout_width="70dp"
        android:layout_height="70dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>